# transcription

./: .gitignore  README.md  app.js  draft  main.py  package.json  readme  readme.md  transcription.py  transcription_gpu.py  utils_functions.py  utils_models.py  utils_pipeline.py  utils_postprocess.py  utils_types.py  yapper.py
auth/: app.js  logger.js  package.json
frontend/: dashboard.html  dashboard.js  file.html  index.html  landing.js  login.html  login.js  navbar.html  navbar.js  register.html  register.js  script.js  transcribe.js  transcription.html  transcription.js  transcription.ts  usage.html  usage.js  usage.ts
frontend/app/: app.js  config.js  index.html  messages-en.json  openapi.html  openapi.yaml  package.json  router.js
frontend/app/css/: animations.css  base.css  layout.css  main.css  style.css  tokens.css  typography.css  utilities.css
frontend/app/css/components/: butons.css  cards.css  forms.css  modal.css  navbar.css  progress.css  table.css
frontend/app/scripts/: api.js  auth.js  dashboard.js  i18n.js  transcribe.js  transcription.js  usage.js  utils.js
frontend/app/templates/: file.html  modal.html
frontend/app/views/: dashboard.html  home.html  login.html  register.html  transcription.html  usage.html
frontend/css/: style.css
frontend/ui/: Cargo.toml
gateway/: app.js  logger.js  nginx.conf  package.json
s3/: app.ts  logger.ts  package.json
transcription/: __init__.py  app.py  pyproject.toml  transcription.py  utils_models.py  utils_pipeline.py  utils_types.py  yapper.py
transcription/module/: dataclasses.py  models.py  options.py  pipeline.py
transcription/transcription.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
