[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window","Document","Element","HtmlElement","Node","HtmlInputElement","HtmlFormElement","HtmlButtonElement","History","Location","Event","MouseEvent","ProgressElement","WebSocket","MessageEvent","Storage","console"] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-storage = "0.3"
